chore: upgrade version and fix overflow (#80)

--- a/apps/www/styles/globals.css
+++ b/apps/www/styles/globals.css
@@ -69,6 +69,7 @@
     scrollbar-width: unset;
   }
   html {
+    overflow-y: scroll;
     @apply scroll-smooth;
   }
   body {
